[package]
name = "quest-core"
version = "0.2.2"
authors = ["Sam Westerman <sam@sampersand.me>"]
description = "The core of the Quest programming language"
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/sampersand/quest"
readme = "../README.md"

[dependencies]
rand = "0.7"
lazy_static = "1.4"
regex = "1.3"
parking_lot = "0.11"
take_mut = "0.2"
mimalloc = { version = "0.1", optional = true }
ureq = '*'
bitflags = "1.2"
tracing = "0.1"
# tracing = "0.1.19"
