[package]
name = "qvm"
version = "0.1.0"
authors = ["Sam Westerman <sam@sampersand.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
bitflags = "1.2.1"
libc = "0.2.81"
try-traits = "0.1.1"
