[package]
name = "qvm"
version = "0.1.0"
authors = ["Sam Westerman <sam@sampersand.me>"]
edition = "2018"

[features]
strict_arguments=[]
default=["strict_arguments"]

[dependencies]
static_assertions = "1.1.0"
bitflags = "1.2.1"
libc = "0.2.81"
lazy_static = "1.4.0"
parking_lot = "0.11.1"
try-traits = "0.1.1"
