[package]
name = "qvm"
version = "0.1.0"
authors = ["Sam Westerman <sam@sampersand.me>"]
edition = "2018"

[features]
strict_arguments=[]
default=["strict_arguments"]

[dependencies]
static_assertions = "1.1"
bitflags = "1.2"
libc = "0.2"
lazy_static = "1.4"
parking_lot = "0.11"
page_size="0.4"
tracing="0.1"
